<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/header_height"
        android:layout_marginStart="@dimen/header_marginStart"
        android:layout_marginTop="@dimen/header_marginTop"
        android:text="Login"
        android:textColor="@color/black"
        android:textSize="@dimen/header_fontSize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginUsernameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_marginStart"
        android:layout_marginTop="@dimen/firstbox_layout_marginTop"
        android:layout_marginEnd="@dimen/layout_marginEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_border"
            android:hint="@string/username" />

        <TextView
            android:id="@+id/loginUsernameAlert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_alert"
            android:textColor="@color/design_default_color_error" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginPasswordLayout"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginUsernameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_border"
            android:hint="@string/password" />

        <TextView
            android:id="@+id/loginPasswordAlert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/password_alert"
            android:textColor="@color/design_default_color_error" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/loginErrMsg"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/error_shape"
        android:layout_marginStart="@dimen/button_marginStart"
        android:layout_marginEnd="@dimen/button_marginEnd"
        android:layout_marginBottom="@dimen/margin_between_button"
        android:gravity="center"
        android:text="Invalid Username/Password"
        android:visibility="gone"
        android:textColor="@color/design_default_color_error"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/button_marginStart"
        android:layout_marginEnd="@dimen/button_marginEnd"
        android:layout_marginBottom="@dimen/margin_between_button"
        android:background="@drawable/button_shape"
        android:text="@string/button_login_text"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/button_marginStart"
        android:layout_marginEnd="@dimen/button_marginEnd"
        android:layout_marginBottom="@dimen/button_marginButton"
        android:background="@drawable/button_shape"
        android:text="@string/button_register_text"
        android:textColor="@color/black"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>